--- a/src/css/TextBox.styl
+++ b/src/css/TextBox.styl
@@ -71,17 +71,17 @@
         position: absolute
         box-sizing: border-box
         left: 0
-        top: 16px
+        top: 1em
         width: 100%
-        line-height: 24px
-        font-size: $-melon-small-font-size
+        line-height: 1.5em
+        font-size: 1em
         color: $-melon-colors.grey500
         transform-origin: left top 0px
         white-space: nowrap
         transition: all .5s
 
         &.{$-melon-state-prefix}-floating
-            transform: scale(0.8) translateY(-24px)
+            transform: scale(0.8) translateY(-1.5em)
 
         &.{$-melon-state-prefix}-focus
             color: $-melon-colors.blue500
@@ -90,10 +90,10 @@
     &-suffix
         box-sizing: border-box
         display: inline-block
-        padding: 16px 0 8px
-        height: 48px
-        line-height: 24px
-        font-size: $-melon-medium-font-size
+        padding: 1em 0 0.5em
+        height: 2.5em
+        line-height: 1em
+        font-size: 1em
         color: $-melon-colors.grey600
         vertical-align: middle
 
