使用 Layer 重构 Select
在这次重构中，添加了以下功能：

1. Select 的浮层现在有了收起时的动画效果。
2. Select 的浮层现在可以定义对齐位置了

--- a/src/css/Layer.styl
+++ b/src/css/Layer.styl
@@ -1,6 +1,8 @@
 .ui-layer
-    position: fixed
-    top: 0
-    left: 0
-    right: 0
-    bottom: 0
+
+    &.variant-mask
+        position: fixed
+        top: 0
+        left: 0
+        right: 0
+        bottom: 0
