--- a/src/css/Select.styl
+++ b/src/css/Select.styl
@@ -34,6 +34,22 @@
         vertical-align middle
         margin-right: -@width
 
+    &-popup
+        position: absolute
+        overflow: hidden
+        text-align: left
+        background-color: $-melon-colors.white
+        box-shadow: melon-get-z-depth('2')
+        border-radius: 2px
+        padding: 0.5rem 0
+        transform-origin: left top 0;
+
+        // 为了让不同的select之间不相互干扰
+        z-index: $-melon-z-index.select-popup
+
+        &-content
+            padding: 1em 0
+
     &-option-group
 
         &-title
@@ -69,24 +85,8 @@
     &.state-invalid
         border-bottom-color: $-melon-colors.red500
 
-    &.state-read-only &-label,
+    &.state-read-only &-label
+        cursor: default;
+
     &.state-disabled &-label
         cursor: not-allowed;
-
-
-.{$-melon-class-prefix}-separate-popup
-    position: absolute
-    overflow: hidden
-    margin-top: 1px
-    top: 0
-    left: 0
-    text-align: left
-    background-color: $-melon-colors.white
-    box-shadow: melon-get-z-depth('2')
-    border-radius: 2px
-
-    // 为了让不同的select之间不相互干扰
-    z-index: $-melon-z-index.select-popup
-
-    &-content
-        padding: 1em 0
