修复 Layer 的 zIndex 问题；修复 DialogWindow 宽度为数字的报警问题；

--- a/src/css/Layer.styl
+++ b/src/css/Layer.styl
@@ -1,3 +1,5 @@
+@require './base.styl'
+
 .ui-layer
 
     &.variant-mask
@@ -6,3 +8,4 @@
         left: 0
         right: 0
         bottom: 0
+        z-index: $-melon-z-index.layer
