--- a/src/css/variable.styl
+++ b/src/css/variable.styl
@@ -28,9 +28,9 @@ $-melon-z-depth = {
 };
 
 $-melon-z-index = {
+    layer: 10,
     dialog: 10,
     snackbar: 10,
     drawer: 10
     select-popup: 11
 };
-
