--- a/src/home/css/home.styl
+++ b/src/home/css/home.styl
@@ -25,7 +25,7 @@
             font-size: 56px
             font-weight: 300
 
-        .ui-button
+        .ui-link
             margin-top: 40px
 
     &-install
@@ -77,8 +77,8 @@
             font-size: $-melon-large-font-size
             line-height: 1.5em
 
-        .ui-button
-            margin-top: 50px
+        .ui-link
+            margin-top: 30px
 
     &-footer
         padding: 72px 24px
