--- a/src/components/css/component.styl
+++ b/src/components/css/component.styl
@@ -34,5 +34,8 @@
 .ui-example
     margin-bottom: 50px
 
+    .ui-floating-action-button
+        position: absolute !important
+
     &-brief
         line-height: 2em
