--- a/src/main.styl
+++ b/src/main.styl
@@ -10,6 +10,8 @@ global-reset()
 @require 'melon/css/**'
 @require 'melon-calendar/lib/index.styl'
 @require 'melon-timepicker/lib/index.styl'
+@require 'melon-colorpicker/lib/index.styl'
+@require 'melon-fab/lib/index.styl'
 
 @require './common/css/**';
 
