--- a/src/main.styl
+++ b/src/main.styl
@@ -12,6 +12,7 @@ global-reset()
 @require 'melon-timepicker/lib/index.styl'
 @require 'melon-colorpicker/lib/index.styl'
 @require 'melon-fab/lib/index.styl'
+@require 'melon-autocomplete/lib/index.styl'
 
 @require './common/css/**';
 
