--- a/example/index.styl
+++ b/example/index.styl
@@ -96,5 +96,6 @@ p
 @require 'Tooltip.styl'
 @require 'Tree.styl'
 @require 'Uploader.styl'
+@require 'Zippy.styl'
 @require '../src/css/Slider.styl'
 @require '../src/css/Zippy.styl'
