--- a/lib/css/Zippy.styl
+++ b/lib/css/Zippy.styl
@@ -1,19 +1,14 @@
 @require './base.styl'
 
 .{$-melon-class-prefix}-zippy
+    transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1) 0ms, height 0.5s cubic-bezier(0.23, 1, 0.32, 1) 0ms, width 0.5s cubic-bezier(0.23, 1, 0.32, 1) 0ms
+    transform: scale(1, 1)
+    transform-origin: top left
 
-    &.variant-vertical
-        transition: height 0.5s cubic-bezier(0.23, 1, 0.32, 1) 0ms
-        &.state-close
-            transition: height 0.5s cubic-bezier(0.23, 1, 0.32, 1) 0ms, visibility 0ms linear 0.5s
-            height: 0
-            overflow-y: hidden
-            visibility: hidden
+    &.variant-vertical.state-close
+        height: 0
+        overflow-y: hidden
 
-    &.variant-horizontal
-        transition: width 0.5s cubic-bezier(0.23, 1, 0.32, 1) 0ms
-        &.state-close
-            transition: width 0.5s cubic-bezier(0.23, 1, 0.32, 1) 0ms, visibility 0ms linear 0.5s
-            width: 0
-            overflow-x: hidden
-            visibility: hidden
+    &.variant-horizontal.state-close
+        width: 0
+        overflow-x: hidden
