修复左对齐排序 icon 位置问题

--- a/src/css/Table.styl
+++ b/src/css/Table.styl
@@ -113,7 +113,7 @@
         text-align: left
 
     &.variant-align-left &-sorter >.ui-icon
-        right: 100%
+        left: 100%
 
     &.variant-align-right
         text-align: right
