--- a/src/css/Select.styl
+++ b/src/css/Select.styl
@@ -1,5 +1,6 @@
 @require './base.styl'
 @require './Icon.styl'
+@require './Popover.styl'
 
 .{$-melon-class-prefix}-select
     position: relative
@@ -23,6 +24,9 @@
         cursor: pointer
         vertical-align: middle
         transition border-color 1s
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
 
         &-placeholder
             color: $-melon-colors.grey500
@@ -35,20 +39,7 @@
         margin-right: -@width
 
     &-popup
-        position: absolute
-        overflow: hidden
-        text-align: left
-        background-color: $-melon-colors.white
-        box-shadow: melon-get-z-depth('2')
-        border-radius: 2px
-        padding: 0.5rem 0
-        transform-origin: left top 0;
-
-        // 为了让不同的select之间不相互干扰
-        z-index: $-melon-z-index.select-popup
-
-        &-content
-            padding: 1em 0
+        padding: 1em 0
 
     &-option-group
 
