--- a/lib/css/Tooltip.styl
+++ b/lib/css/Tooltip.styl
@@ -4,19 +4,7 @@
 
     display: inline-block
 
-    &-container
-        position: absolute
-        top: 0
-        left: 0
-
-        > div
-            position: absolute
-            top: 0
-            left: 0
-
-    &-popup
-        position: absolute
-        box-sizing: border-box
+    &-popover
         padding: 0 0.5em
         font-size: $-melon-x-small-font-size
         line-height: 1.6em
