[update] Add Chip component - 增加chip组件和相关样式 - 增加example下chip组件相关示例 - 略微修改了热重载配置,精简浏览器端输出信息

--- a/example/index.styl
+++ b/example/index.styl
@@ -82,6 +82,7 @@ p
 @require 'BoxGroup.styl'
 @require 'Breadcrumb.styl'
 @require 'Button.styl'
+@require 'Chip.styl'
 @require 'Dialog.styl'
 @require 'Drawer.styl'
 @require 'Pager.styl'
