--- a/src/css/theme/default/index.styl
+++ b/src/css/theme/default/index.styl
@@ -7,3 +7,4 @@
 @require './Tabs.variable.styl'
 @require './Breadcrumb.variable.styl'
 @require './ToolBar.variable.styl'
+@require './Chip.variable.styl'
