--- a/src/css/Chip.styl
+++ b/src/css/Chip.styl
@@ -10,6 +10,7 @@
     overflow: hidden
     &.state-active
         {$-melon-chip-shadow}
+        cursor: pointer
         &:hover
             color: $-melon-chip.color-hover
             background-color: $-melon-chip.background-color-hover
