添加文档构建
1. 把 highlight.js 替换成 prismjs
2. 添加 bundle analyzer

--- a/example/common/component/ReactDemoCodeBlock.styl
+++ b/example/common/component/ReactDemoCodeBlock.styl
@@ -4,6 +4,7 @@
  */
 
 @require '../../../src/css/mixin.styl';
+@require 'prism-theme-one-dark/prism-onedark.css';
 
 .react-code-block-demo
 
@@ -36,6 +37,7 @@
             margin-bottom: 0
             border-top-left-radius: 0;
             border-top-right-radius: 0;
+            margin-top: 0 !important;
 
     >div
         padding: 1rem;
