--- a/example/index.styl
+++ b/example/index.styl
@@ -8,6 +8,7 @@ body
 @require '../src/css/theme/default/index.styl'
 @require '../src/css/Navigation.styl'
 @require '../src/css/Button.styl'
+@require '../src/css/BoxGroup.styl'
 @require '../src/css/Icon.styl'
 @require '../src/css/Drawer.styl'
 @require './App.styl'
