添加对话窗文档

--- a/example/index.styl
+++ b/example/index.styl
@@ -11,4 +11,5 @@ body
 @require '../src/css/BoxGroup.styl'
 @require '../src/css/Icon.styl'
 @require '../src/css/Drawer.styl'
+@require '../src/css/Dialog.styl'
 @require './App.styl'
