现在 github markdown css 不再造成污染

--- a/example/App.styl
+++ b/example/App.styl
@@ -34,7 +34,7 @@
     background-color: #fff;
 
 @require 'highlight.js/styles/atom-one-dark.css'
-@require 'github-markdown-css/github-markdown.css'
+@require './common/css/github-markdown.css'
 
 .markdown-body
     ul
