--- a/example/common/component/ReactDemoCodeBlock.styl
+++ b/example/common/component/ReactDemoCodeBlock.styl
@@ -9,6 +9,7 @@
 .react-code-block-demo
 
     box-shadow: rgba(0, 0, 0, .18) 0 1px 2px
+    margin-bottom: 1rem
 
     >header
         height: 3rem;
