--- a/example/index.styl
+++ b/example/index.styl
@@ -12,4 +12,5 @@ body
 @require '../src/css/Icon.styl'
 @require '../src/css/Drawer.styl'
 @require '../src/css/Dialog.styl'
+@require '../src/css/Breadcrumb.styl'
 @require './App.styl'
