--- a/example/index.styl
+++ b/example/index.styl
@@ -13,4 +13,6 @@ body
 @require '../src/css/Drawer.styl'
 @require '../src/css/Dialog.styl'
 @require '../src/css/Breadcrumb.styl'
+@require '../src/css/Avatar.styl'
+@require '../src/css/Card.styl'
 @require './App.styl'
