--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -1,6 +1,7 @@
 @require './colors.styl'
 @require './variable.styl'
 @require './mixin.styl'
+@require './font.styl'
 
 .{$-melon-state-prefix}-hidden
     display none !important
