--- a/src/css/Card.styl
+++ b/src/css/Card.styl
@@ -5,12 +5,66 @@
     box-shadow: melon-get-z-depth('1')
     border-radius: 2px
     background-color: #fff
+    font-family: melon-base-font()
+
+    &-header
+        padding: 1em
+        display: flex
+
+        >.ui-avatar
+            flex: 0 0 auto
+
+        &-title
+            margin-left: 1rem
+
+            >h4
+                font-size: .9375rem
+                font-weight: 700
+                font-family: melon-base-font()
+
+            >div
+                font-size: .75rem
+                color: $-melon-colors.lightBlack
+                font-family: melon-base-font()
+
+    &-media
+        position: relative;
+        z-index: 0
+
+        &-image
+            display: block;
+            width: 100%
+
+        &-overlay
+            position: absolute;
+            bottom: 0
+            left: 0
+            right: 0
+            background-color: $-melon-colors.lightBlack;
+            color: #fff
 
     &-title
         box-sizing: border-box
         padding: 1.5em 1em 1em
+        font-family: melon-base-font()
 
-    &-content
+        &-title
+            font-weight: 700
+            font-size: 1.5rem
+
+        &-subtitle
+            font-size: 1rem
+            color: $-melon-colors.lightBlack
+
+    &-media-overlay &-title
+
+        &-title
+            color: #fff
+
+        &-subtitle
+            color: rgba(#fff, .57)
+
+    &-text
         box-sizing: border-box
         padding: 0 1em 1em
 
