让 CodeBlock 的源码展开时更有动画感

--- a/example/common/component/ReactDemoCodeBlock.styl
+++ b/example/common/component/ReactDemoCodeBlock.styl
@@ -32,7 +32,7 @@
 
     >section
         overflow: hidden
-        transition: max-height .3s ease-out
+        transition: max-height .3s ease-in-out
 
         >pre
             margin-bottom: 0
