在 dialog 中移除对 react-motion 的依赖

--- a/example/index.styl
+++ b/example/index.styl
@@ -15,4 +15,5 @@ body
 @require '../src/css/Breadcrumb.styl'
 @require '../src/css/Avatar.styl'
 @require '../src/css/Card.styl'
+@require '../src/css/Chip.styl'
 @require './App.styl'
