--- a/example/App.styl
+++ b/example/App.styl
@@ -18,9 +18,9 @@
     display: flex;
     align-items: center;
     background-color: $-melon-colors.blue500;
-    padding: 0 1rem
+    padding: 0.5rem 1rem
     box-shadow: melon-get-z-depth('1')
-    z-index: 100
+    z-index: 1
 
     >.ui-button
         margin-left: -1rem;
