--- a/src/css/Mask.styl
+++ b/src/css/Mask.styl
@@ -6,18 +6,19 @@
     position: fixed
     height: 100%
     width: 100%
-    z-index: $-melon-z-index.dialog - 1
+    z-index: -1
     top: 0
-    left: -100%
     opacity: 0
     -webkit-tap-highlight-color: $-melon-colors.transparent
     will-change: opacity
     transform: translateZ(0)
-    transition: left 0ms cubic-bezier(0.23, 1, 0.32, 1) 400ms, opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms
+    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 50ms
     background-color: $-melon-colors.lightBlack
 
     &.state-show
-        left: 0
         opacity: 1
         will-change: opacity
-        transition: left 0ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms
+        z-index: $-melon-z-index.dialog - 1
+
+        &.state-closing
+            opacity: 0
