--- a/src/css/Mask.styl
+++ b/src/css/Mask.styl
@@ -4,10 +4,12 @@
 .{$-melon-class-prefix}-mask
 
     position: fixed
-    height: 100%
-    width: 100%
-    z-index: -1
+    left 0
+    right: 0
     top: 0
+    bottom: 0
+    z-index: -1
+
     opacity: 0
     -webkit-tap-highlight-color: $-melon-colors.transparent
     will-change: opacity
