修复在 firefox / safari 上按钮丢失 click 事件的问题

--- a/src/css/Ripple.styl
+++ b/src/css/Ripple.styl
@@ -40,6 +40,7 @@
     border-radius: 50%
     user-select: none
     transition: transform 450ms ease-in-out, opacity 450ms linear
+    pointer-events: none
 
     &.state-appearing
         opacity: 0.1;
