优化文档的 bundle 大小

--- a/example/App.styl
+++ b/example/App.styl
@@ -7,7 +7,8 @@
 
 *
     -webkit-font-smoothing: antialiased;
-    font-family: PangFang SC, arial
+    font-family: "PangFang SC", "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", "Microsoft Yahei", sans-serif
+
 
 .app
     background-color: #ececec;
