--- a/example/index.styl
+++ b/example/index.styl
@@ -16,4 +16,5 @@ body
 @require '../src/css/Avatar.styl'
 @require '../src/css/Card.styl'
 @require '../src/css/Chip.styl'
+@require '../src/css/Slider.styl'
 @require './App.styl'
