--- a/example/index.styl
+++ b/example/index.styl
@@ -2,7 +2,7 @@
 
 global-reset()
 
-body
+html, body
     font-size: 16px
 
 @require '../src/css/theme/default/index.styl'
@@ -17,4 +17,5 @@ body
 @require '../src/css/Card.styl'
 @require '../src/css/Chip.styl'
 @require '../src/css/Slider.styl'
+@require '../src/css/Menu.styl'
 @require './App.styl'
