使用 react 16 的 createPortal 接口重构 Layer；由于 enzyme 暂时不支持此 api 因此屏蔽部分单测。

--- a/test/index.styl
+++ b/test/index.styl
@@ -1,5 +1,6 @@
-@import '../src/css/theme/default/index.styl';
-@import '../src/css/base.styl';
-@import '../../src/css/Dialog.styl';
-@import '../../src/css/Tooltip.styl';
-@import '../../src/css/ScrollView.styl';
+@require '../src/css/theme/default/index.styl';
+@require '../src/css/base.styl';
+@require '../../src/css/Dialog.styl';
+@require '../../src/css/Tooltip.styl';
+@require '../../src/css/ScrollView.styl';
+@require '../../src/css/Layer.styl'
